# ziply

./: .clang-format  .gitignore  CMakeLists.txt  Makefile  README.md  windows-toolchain.cmake
include/: Error.hpp  File.hpp  ThreadPool.hpp  concurrency.hpp  ende.hpp  file_old.hpp  generator.hpp  parser.hpp  stb_image_write.h  stb_image_write.hpp  ziply.hpp
res_ziply_frags1734418046863/: ziply_frame_11.zfrag  ziply_frame_12.zfrag  ziply_frame_2.zfrag  ziply_frame_4.zfrag  ziply_frame_5.zfrag  ziply_frame_6.zfrag  ziply_frame_7.zfrag
res_ziply_frags1734418212876/: ziply_frame_1.zfrag  ziply_frame_10.zfrag  ziply_frame_3.zfrag  ziply_frame_8.zfrag  ziply_frame_9.zfrag
src/: Error.cpp  File.cpp  ThreadPool.cpp  en.cpp  ende.cpp  file_old.cpp  generator.cpp  main.cpp  parser.cpp  stb_image_write.cpp  ziply.cpp
